# EnergyPlus-Core-Python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/actions/package/: action.yml
.github/actions/packaging/: action.yml
.github/actions/publishing/: action.yml
.github/actions/testing/: action.yml
.github/workflows/: build_linux.yaml  release.yaml  release_linux.yaml  release_macos.yaml  release_windows.yaml  test_workflow.yaml
TODOs/: TODO.yml  test_workflow.yaml
examples/energyplus/core/: basic.py
examples/energyplus_core/: 00-basic.py
scripts/: README.md  generate_gitignore.sh
scripts/resources/EnergyPlus/: update_release.sh
tests/energyplus/: test_.py
tests/energyplus_core/: test_.py
tests/examples/energyplus/core/: test_basic.py
tests/examples/energyplus_core/: test_basic.py
