[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "resources/EnergyPlus"
wheel.packages = ["packages/energyplus_core"]
wheel.install-dir = "energyplus_core/lib"

[tool.scikit-build.cmake.define]
# NOTE required for pyenergyplus
BUILD_PACKAGE = "ON"

[project]
name = "energyplus-core"
version = "0.1.0a0"
description = "EnergyPlus Kernel with Python Bindings"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "./tests",
]