[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "energyplus-core"
dynamic = ["version"]
description = "EnergyPlus Kernel with Python Bindings"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.source-dir = "resources/EnergyPlus"
wheel.packages = ["packages/energyplus_core"]
wheel.install-dir = "energyplus_core/lib"

[tool.scikit-build.cmake.define]
# NOTE required for pyenergyplus
BUILD_PACKAGE = "ON"

[tool.setuptools_scm]  # Section required

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["./tests"]
