[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "energyplus-core"
dynamic = ["version"]
description = "EnergyPlus Kernel with Python Bindings"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.source-dir = "resources/EnergyPlus"
wheel.py-api = "cp38"
wheel.packages = ["packages/energyplus_core"]
wheel.install-dir = "energyplus_core/lib"

[tool.scikit-build.cmake.define]
# NOTE required for pyenergyplus
BUILD_PACKAGE = "ON"

# NOTE required section
[tool.setuptools_scm]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["./tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311

[testenv]
deps = 
    pytest
commands = pytest
"""
